# techconnect

./: .dockerignore  .env.docker.example  .gitignore  README.md  compose.yaml  package.json  pyproject.toml  skills-lock.json
.agents/skills/playwright-best-practices/: SKILL.md
docker/: api.Dockerfile  web.Dockerfile
docker/nginx/: default.conf
docs/: auth-implementation.md  docker-compose-deployment.md
docs/examples/: techconnect.nginx.site.conf
frontend/: angular.json  messages.xlf  package-lock.json  package.json  playwright.config.ts  proxy.conf.json  tsconfig.json
frontend/e2e/: auth.spec.ts  biomodels.crud.spec.ts  dashboard.spec.ts  data-transfer.spec.ts  passages.crud.spec.ts  patients.crud.spec.ts  samples.crud.spec.ts  trials.crud.spec.ts  tumors.crud.spec.ts
frontend/e2e/helpers/: api-fixtures.ts  ui-helpers.ts
frontend/src/: material-theme.scss  styles.css
frontend/src/app/: app.config.spec.ts  app.config.ts  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/core/guards/: auth.guard.spec.ts  auth.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.spec.ts  auth.interceptor.ts  credentials.interceptor.spec.ts  error.interceptor.spec.ts  error.interceptor.ts
frontend/src/app/core/models/: auth.models.ts
frontend/src/app/core/services/: auth.service.spec.ts  (+4 more)
frontend/src/locale/: messages.es.xlf  messages.xlf
python/: README.md  database.py  pyproject.toml  techconnect.db
python/models/: __init__.py  liquid_biopsy.py  passage.py  patient.py  pdx_entities.py  trial.py  tumor.py
schema/: mysql.ts  postgres.ts  sqlite.ts
(+79 files in other folders)
