[project]
name = "techconnect"
version = "0.1.0"
description = "TechConnect monorepo - Backend and schemas for biomedical research application"
requires-python = ">=3.14.2"
dependencies = []

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["packages/api", "packages/schemas"]

[tool.uv.sources]
techconnect-schemas = { workspace = true }
